made changes for the latest version 3

--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -22,7 +22,7 @@
 
   <select id="links">
     <option value="">Logout</option>
-    <option value="/clinic/call?task=new" ttSize="190px">Start Call</option>
+    <option value="/clinic/new_call?task=new" ttSize="190px">Start Call</option>
     <option value="/clinic/housekeeping?task=housekeeping" ttSize="190px">House Keeping</option>
   </select>
 </div>
