--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -61,6 +61,21 @@
            #:validationMessage => "Patient has already enrolled in #{@tips_and_reminders} tips and reminders content",
            :condition    => "$('select_outcome').value != 'GIVEN ADVICE'" } %>
 
+<% options = {
+     :id          => "select_secondary_outcome",
+     :optional    => true,
+     :multiple => false,
+     :tt_onUnLoad => "$('outcome_value_coded_or_text').value = $('select_outcome').value",
+     :helpText    => "Was there a secondary call outcome"
+     } %>
+
+  <%= select_tag("select_secondary_outcome", options_for_select(@outcome, @selected_value), options)%>
+  <%= hidden_field_tag("observations[][concept_name]",        "SECONDARY OUTCOME") %>
+  <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'outcome_value_coded_or_text'}) %>
+  <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
+  <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
+
+
   <%unless @encounter_id.nil?%>
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
     <%= hidden_field_tag("editing",       true) %>
