--- a/application/app/views/people/new.rhtml
+++ b/application/app/views/people/new.rhtml
@@ -115,15 +115,38 @@
     
       <%= text_field_tag "person[addresses][county_district]",  params[:county_district], {:id => 'ta', :field_type => 'alpha', :helpText => 'Current Traditional Authority (TA)', :ajaxURL => '/people/traditional_authority/TraditionalAuthority?search_string=', :allowFreeText => true }%>
       
-      <%= text_field_tag "person[addresses][address2]", params[:address2], {:id => 'address2', :field_type => 'alpha', :helpText => 'Home Village', :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
+      <%= text_field_tag "person[addresses][address2]", params[:address2],
+        {
+        :field_type => 'alpha',
+        :helpText => "Home Village",
+        :ajaxURL => '/people/village?search_string=',
+        :allowFreeText => false ,
+        :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village/Village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
       
-      <%= text_field_tag "person[addresses][city_village]", params[:city_village], {:id => 'city_village', :field_type => 'alpha', :helpText => 'Current Village (residence)', :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
+      <%= text_field_tag "person[addresses][city_village]", params[:city_village],
+        {
+        :field_type => 'alpha',
+        :helpText => 'Current Village (residence)',
+        :ajaxURL => '/people/village?search_string=',
+        :allowFreeText => false ,
+        :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village/Village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
+      
+      <%= text_field_tag "person[addresses][subregion]", params[:group_village_head],
+        {
+        :field_type => 'alpha',
+        :helpText => 'Current Village (residence)',
+        :ajaxURL => '/people/village?search_string=',
+        :allowFreeText => false ,
+        :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village/Village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
+      <%#= text_field_tag "person[addresses][address2]", params[:address2],       {:id => 'address2', :field_type => 'alpha', :helpText => 'Home Village',          :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
+      
+      <%#= text_field_tag "person[addresses][city_village]", params[:city_village], {:id => 'city_village', :field_type => 'alpha', :helpText => 'Current Village (residence)', :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" } if ask_home_village %>
     
-      <%= text_field_tag "person[addresses][subregion]", params[:group_village_head], {:id => 'group_village_head', :field_type => 'alpha', :helpText => 'Group Village Head', :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" }%>
-    
-      <%= select_tag "person[attributes][nearest_health_facility]",  options_for_select(@health_facilities), {:field_type => 'alpha', :helpText => 'Nearest Health Facility', 
-        #:ajaxURL => '/person_attributes/nearest_health_facility?search_string=',
-        :allowFreeText => true}%>
+      <%#= text_field_tag "person[addresses][subregion]", params[:group_village_head], {:id => 'group_village_head', :field_type => 'alpha', :helpText => 'Group Village Head', :ajaxURL => '', :allowFreeText => false, :tt_onLoad => "seen(tstCurrentPage); set_ajaxURL_for_suggestions('/people/village?filter_value=' ,document.getElementById('ta').value)" }%>
+      
+      <%= text_field_tag "person[attributes][nearest_health_facility]]",  params[:health_facility], {:id => 'nhc', :field_type => 'alpha', :helpText => 'Nearest Health Facility', :ajaxURL => '/people/healthcenter/HelthCenter?search_string=', :allowFreeText => true }%>
+      <%#= select_tag "person[attributes][nearest_health_facility]",  options_for_select(@health_facilities), {:field_type => 'alpha', :helpText => 'Nearest Health Facility', 
+        #:ajaxURL => '/person_attributes/nearest_health_facility?search_string=',        :allowFreeText => true}%>
     
       <%#= text_field_tag "person[attributes][cell_phone_number]",  params[:cell_phone_number], {:field_type => 'number',:validationJS =>"validPhoneNum('cell_phone_number')", :helpText => 'Cell Phone Number', :allowFreeText => true, :validationMessage => "You must enter a valid number" }%>
     
@@ -145,7 +168,6 @@
       <%end%>
     
       <%= select_tag("person[attributes][occupation]", options_for_select([" ", "Housewife", "Farmer", "Police", "Soldier", "Business", "Teacher", "Student", "Healthcare Worker", "Caller is a Child"].sort.concat(["Other"]) ,params[:occupation]),:helpText =>"Occupation",:allowFreeText => true, :tt_onLoad => 'seen(tstCurrentPage);')%>
-  
   <% end%>    
   <!-- Make sure "new" patient is created -->
 
