--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -52,6 +52,10 @@
       <%if @patient.female_adult?%>
         <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>'>Pregnancy Status</option>
         <option value='/encounters/new/female_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
+      <%elsif @patient.male_adult?%>
+        <% if @patient.person.age >= 18 %>
+          <option value='/encounters/new/female_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
+        <% end %>
       <%else%>
         <% if @patient.person.age <= 5 %>
           <option value='/encounters/new/child_symptoms?patient_id=<%=@patient.id%>'>Symptoms</option>
