--- a/application/app/views/patients/_edit_demographics.rhtml
+++ b/application/app/views/patients/_edit_demographics.rhtml
@@ -62,7 +62,7 @@
  <%= text_field_tag "person[addresses][subregion]",  params[:group_village_head], {:field_type => 'alpha', :helpText => 'Group Village Head', :ajaxURL => '/person_addresses/group_village_head?search_string=', :allowFreeText => true }%>
 
 <%when 'current_ta'%>
-  <%= text_field_tag "person[addresses][county_district]",  params[:county_district], {:field_type => 'alpha', :helpText => 'Current Traditional Authority (TA)', :ajaxURL => '/search/ta?search_string=', :allowFreeText => true }%>
+  <%= text_field_tag "person[addresses][county_district]",  params[:county_district], {:field_type => 'alpha', :helpText => 'Current Traditional Authority (TA)', :ajaxURL => '/people/traditional_authority/TraditionalAuthority?search_string=', :allowFreeText => true }%>
 
 <%when 'home_district'%>
   <%= text_field_tag "person[addresses][address2]",  params[:address2], {:field_type => 'alpha', :helpText => 'Home district', :ajaxURL => '/search/place_of_birth?search_string=', :allowFreeText => true }%>
