added the follow up feature

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -27,5 +27,6 @@
       <option value="/clinic/emergencycall" ttSize="200px">Emergency Call</option>
     <%end%>
     <option value="/people/find_by_phone" ttSize="200px">Find by phone</option>
+    <option value="/clinic/showfollowuplist" ttSize="130px">Follow up</option>
   </select>
 </div>
