--- a/application/app/views/report/patient_age_distribution_report.html.erb
+++ b/application/app/views/report/patient_age_distribution_report.html.erb
@@ -174,6 +174,22 @@
                 <td class="cellleft cellbottom cellright main-table-cell">
                   <%= data[:statistical_data][:delivered][:statistical_info][:sdev] rescue 0 %>
                 </td>
+               <% elsif pregnancy_status.first.downcase == 'miscarried' %>
+                <td class="cellleft cellbottom main-table-cell">
+                  <%= data[:statistical_data][:miscarried][:statistical_info][:percentage] rescue 0 %>
+                </td>
+                <td class="cellleft cellbottom main-table-cell">
+                  <%= data[:statistical_data][:miscarried][:statistical_info][:min] rescue 0 %>
+                </td>
+                <td class="cellleft cellbottom main-table-cell">
+                  <%= data[:statistical_data][:miscarried][:statistical_info][:max] rescue 0 %>
+                </td>
+                <td class="cellleft cellbottom main-table-cell">
+                  <%= data[:statistical_data][:miscarried][:statistical_info][:average] rescue 0 %>
+                </td>
+                <td class="cellleft cellbottom cellright main-table-cell">
+                  <%= data[:statistical_data][:miscarried][:statistical_info][:sdev] rescue 0 %>
+                </td>
               <% end %>
             </tr>
             <% end %>
