--- a/application/app/views/clinic/district.rhtml
+++ b/application/app/views/clinic/district.rhtml
@@ -1,12 +1,19 @@
 <script type="text/javascript">
-  tt_cancel_destination = "/clinic/irrelevantcall";
+
   tt_cancel_show = "/clinic";
+  <% if @task == 'new' %>
+    var tt_cancel_destination = "/clinic/irrelevantcall"
+  <% else %>
+    var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
+  <% end %>
 </script>
 
 <form id='confirm' action="/clinic/district" method='post'>
 
   <%= select_tag "district", options_for_select(@districts), {:helpText => 'Select the district where the caller is?', :id => "district"}%>
-  <%= select_tag "call_mode", options_for_select(@call_modes), {:helpText => 'Select the type of caller?', :id => "call_mode"}%>
+  <%if @task == 'new'%>
+    <%= select_tag "call_mode", options_for_select(@call_modes), {:helpText => 'Select the type of caller?', :id => "call_mode"}%>
+  <%end%>
 
   <%= submit_tag "Finish" %>
 </form>
