--- a/application/app/views/people/new.rhtml
+++ b/application/app/views/people/new.rhtml
@@ -167,7 +167,7 @@
       <%= text_field_tag "person[attributes][home_phone_number]",  params[:home_phone_number], {:field_type => 'number', :helpText => 'Home Phone Number', :allowFreeText => true }%>
       <%end%>
     
-      <%= select_tag("person[attributes][occupation]", options_for_select([" ", "Housewife", "Farmer", "Police", "Soldier", "Business", "Teacher", "Student", "Healthcare Worker", "Caller is a Child"].sort.concat(["Other"]) ,params[:occupation]),:helpText =>"Occupation",:allowFreeText => true, :tt_onLoad => 'seen(tstCurrentPage);')%>
+      <%= select_tag("person[attributes][occupation]", options_for_select([" ", "Housewife", "Farmer", "Police", "Soldier", "Business", "Teacher", "Student", "Healthcare Worker", "Client is a Child"].sort.concat(["Other"]) ,params[:occupation]),:helpText =>"Occupation",:allowFreeText => true, :tt_onLoad => 'seen(tstCurrentPage);')%>
   <% end%>    
   <!-- Make sure "new" patient is created -->
 
