--- a/application/app/views/clinic/district.rhtml
+++ b/application/app/views/clinic/district.rhtml
@@ -10,7 +10,7 @@
 
 <form id='confirm' action="/clinic/district" method='post'>
 
-  <%= select_tag "district", options_for_select(@districts), {:helpText => 'Select the district where the caller is?', :id => "district"}%>
+  <%= select_tag "district", options_for_select(@districts.sort), {:helpText => 'Select the district where the caller is?', :id => "district"}%>
   <%if @task == 'new'%>
     <%= select_tag "call_mode", options_for_select(@call_modes), {:helpText => 'Select the type of caller?', :id => "call_mode"}%>
   <%end%>
