--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -25,10 +25,10 @@
   <div id="patient_card">
     <div id="ivr_access_code" value="<%= @patient.ivr_access_code rescue '' %>">IVR Access Code</div>
     
-    <% if @status == 'DELIVERED' %>
+    <% if @status.upcase == 'DELIVERED' %>
         <div id="date_delivered" value="<%=@date%>">Date Delivered</div>
     <% end %>
-    <% if @status == 'PREGNANT'%>
+    <% if @status.upcase == 'PREGNANT'%>
         <div id="expected_delivery_date" value="<%=@date%>">Expected Delivery Date</div>
     <% end %>
   </div>
