ensured that if the initial call details, like district and call mode have not been set, cancel should return to clinic home menu

--- a/application/app/views/clinic/district.rhtml
+++ b/application/app/views/clinic/district.rhtml
@@ -2,7 +2,7 @@
 
   tt_cancel_show = "/clinic";
   <% if @task == 'new' %>
-    var tt_cancel_destination = "/clinic/irrelevantcall"
+    var tt_cancel_destination = "/clinic"
   <% else %>
     var tt_cancel_destination = "/clinic/housekeeping?task=housekeeping"
   <% end %>
