--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -66,6 +66,7 @@
       <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
       <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
       <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
+      <option value='/encounters/new/pregnancy_status?patient_id=<%=@patient.id%>&anc_connect_workflow_start=true'>ANC connect</option>
       <option value='/clinic/call?task=next'>Next Client</option>
     <% else %>
       <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Reminders</option>
